--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "fideloper/proxy": "^4.0",
         "laravel/framework": "^6.18.35",
         "laravel/tinker": "^2.0",
+        "spatie/laravel-query-builder": "^3.2",
         "tymon/jwt-auth": "^1.0"
     },
     "require-dev": {
